tests/snapshots/test_runner__tests__compiler__typecheck__import_8__import_8.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
// circular import
import "../import_6" { spam }

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/import_7/import_7.kk:2:8
  │
2 │ import "../import_8" { spam }
  │        ^^^^^^^^^^^^^ Cyclic dependencies detected.
  │
  = Explanation:

      tests/compiler/typecheck/import_8 imports tests/compiler/typecheck/import_6
      tests/compiler/typecheck/import_6 imports tests/compiler/typecheck/import_7
      tests/compiler/typecheck/import_7 imports tests/compiler/typecheck/import_8
